# hood

./: README.md  pyproject.toml
hood/cli/: _util.py  account.py  auth.py
hood/crypto_trading/: __init__.py  _protocols.py  auth.py  constants.py  parse.py  schema.py  structures.py  util.py
hood/crypto_trading/_endpoint/: account.py  market.py  trading.py
hood/crypto_trading/endpoint/: __init__.py  account.py  market.py
hood/crypto_trading/schema/: trading.py
hood/schema/: __init__.py  account.py  market.py  trading.py
